test_vectors/nfl_packet_verify_v1/negative/bad_sha256sum_line_0537effea5f535d061b313f72e37ca52d4a34fff00865066c51fa7dff410618a/payload/repo_snapshot/repo_root/tools/pwsh/05_http.ps1
#requires -Version 7.0
[CmdletBinding()]
param()

Set-StrictMode -Version Latest
$ErrorActionPreference = "Stop"

function Invoke-GiPpiJson {
  [CmdletBinding()]
  param(
    [Parameter(Mandatory)][string]$Uri,
    [Parameter(Mandatory)][hashtable]$Headers,
    [Parameter(Mandatory)][string]$JsonBody,
    [ValidateSet("GET","POST","PUT","PATCH","DELETE")]
    [string]$Method = "POST"
  )

  Write-Verbose "GI_PPI_HTTP $Method $Uri"

  $resp = Invoke-WebRequest `
    -Uri $Uri `
    -Method $Method `
    -Headers $Headers `
    -Body $JsonBody `
    -ContentType "application/json" `
    -SkipHttpErrorCheck

  $status = [int]$resp.StatusCode
  $raw = [string]$resp.Content

  if ($status -lt 200 -or $status -ge 300) {
    throw "GI_PPI_HTTP_FAILED: HTTP $status`n$raw"
  }

  if ([string]::IsNullOrWhiteSpace($raw)) { return $null }
  try { return $raw | ConvertFrom-Json } catch { return $raw }
}

function GI_PPI_NewUserHeaders {
  param([Parameter(Mandatory)][string]$AccessToken)

  @{
    "apikey"        = $env:SUPABASE_PUBLISHABLE_KEY
    "Authorization" = "Bearer $AccessToken"
    "Content-Type"  = "application/json"
  }
}

function GI_PPI_NewAdminHeaders {
  @{
    "apikey"        = $env:SUPABASE_SECRET_KEY
    "Authorization" = "Bearer $env:SUPABASE_SECRET_KEY"
    "Content-Type"  = "application/json"
  }
}
